--- a/.env
+++ b/.env
@@ -27,6 +27,10 @@ APP_SECRET=89d66279979b76db2dde65def6410479
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/2066177_travailpratique?serverVersion=16&charset=utf8"
+
+# PROD DATABASE 
+# DATABASE_URL="mysql://e2066177_travailpratique:travailpratiquepassword@
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
