--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=Prod
+APP_ENV=dev
 APP_SECRET=89d66279979b76db2dde65def6410479
 ###< symfony/framework-bundle ###
 
