--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=89d66279979b76db2dde65def6410479
 ###< symfony/framework-bundle ###
 
@@ -28,10 +28,10 @@ APP_SECRET=89d66279979b76db2dde65def6410479
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 
 # DEV DATABASE
-DATABASE_URL="mysql://root:@127.0.0.1:3306/2066177_travailpratique?serverVersion=16&charset=utf8"
+#DATABASE_URL="mysql://root:@127.0.0.1:3306/2066177_travailpratique?serverVersion=16&charset=utf8"
 
 # PROD DATABASE 
-#DATABASE_URL="mysql://e2066177_travailpratique:travailpratiquepassword@techinfo-cstj.ca:3306/e2066177_travailpratique?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://e2066177_travailpratique:travailpratiquepassword@techinfo-cstj.ca:3306/e2066177_travailpratique?serverVersion=16&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
 
